--- a/options/css/options.css
+++ b/options/css/options.css
@@ -69,6 +69,14 @@ border: 1px solid #e5e5e5;
     padding: 8px 35px 8px 14px;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
 }
+#nhp-opts-imported{
+	margin:0px;
+	border-bottom:1px solid #BCE8F1;
+    background-color: #D9EDF7;
+    color: #3A87AD;
+    padding: 8px 35px 8px 14px;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+}
 #nhp-opts-save-warn{
 	margin:0px;
 	display:none;
@@ -300,6 +308,20 @@ border: 1px solid #e5e5e5;
 	padding: 5px;
 }
 
+
+
+
+
+#nhp-opts-export-code{
+	display:none;
+}
+#nhp-opts-import-action span{
+	color:#B94A48;
+}
+#import_divide{
+	margin: 40px 0px;
+	border-bottom: 1px solid #DFDFDF;
+}
 
 
 
