--- a/options/css/options.css
+++ b/options/css/options.css
@@ -387,3 +387,51 @@ border: 1px solid #e5e5e5;
 	max-width: 300px;
 	display:block;
 }
+
+
+
+
+
+@media screen and (max-width : 900px) {
+	#nhp-opts-sidebar{
+		width:42px;
+	}
+	#nhp-opts-main{
+		margin-left:43px;
+	}
+	.nhp-opts-group-tab-link-a{
+		position: relative;
+	}
+	.nhp-opts-group-tab-link-a span{
+		display:none;
+		position:absolute;
+		top: 0;
+		left:44px;
+		padding: 14px;
+		width: 200px;
+		background: #eeeeee;
+		border: 1px solid #DFDFDF;
+		border-width: 1px 1px 1px 0px;
+	}
+	.nhp-opts-group-tab-link-a:hover > span{
+		display: block;
+	}
+	#nhp-opts-sidebar #nhp-opts-group-menu li a,
+	#nhp-opts-sidebar #nhp-opts-group-menu li a:hover,
+	#nhp-opts-sidebar #nhp-opts-group-menu li.active a,
+	#nhp-opts-sidebar #nhp-opts-group-menu li.active a:hover{
+		width:15px;
+	}
+	
+	table.form-table, .form-table > thead, .form-table > tbody, .form-table > tbody > tr > th, .form-table > tbody > tr > td, .form-table > tbody > tr {
+		display: block !important;
+		width: 100% !important;
+		padding: 0px !important;
+	}
+	.form-table > tbody > tr > th, .form-table > tbody > tr > td{
+		padding: 10px !important;
+	}
+	.form-table > tbody > tr > td span.description{
+		display: block;
+	}
+}
